# crawl-telegraph

./: .gitignore  README.md  compress.py  image_url.py  main.py  pyproject.toml  ui.py
.github/: copilot-instructions.md
judgeWeb/: image_url.py
templates/: index.html
