[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crawl-telegraph"
version = "0.2.0"
description = "Small toolset to scrape and download images from telegra.ph pages."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Kerry", email = "kerry@example.com" }
]
requires-python = "3.12"
keywords = ["telegra.ph", "crawler", "images", "download"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

dependencies = [
    "requests>=2.28,<3",
    "gradio>=6.5,<7",
    "pillow>=12.0,<13"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<8",
    "black>=24.0,<25"
]

[project.scripts]
crawl-telegraph = "main:main"
crawl-telegraph-ui = "ui:launch_ui"

[project.urls]
Homepage = "https://github.com/lkrkerry1/crawl-telegraph"
Repository = "https://github.com/lkrkerry1/crawl-telegraph"
Source = "https://github.com/lkrkerry1/crawl-telegraph"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
